# nw-agent

./: .env.example  .gitignore  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  openclaw-setup.md
eval/: README.md  run_eval.py  seeds.yaml  system_prompt.md
knowledge/raw/: 01_company_overview.md  02_consultation_plans.md  03_exams_catalog.md  04_supplements.md  05_specialists.md  06_faq.md  07_contact_channels.md  08_agent_voice.md  README.md
openclaw/hooks/nw-message-journal/: HOOK.md  handler.ts
openclaw/plugins/customer-service-tools/: index.js  openclaw.plugin.json  package.json
openclaw/skills/customer-service-policy/: SKILL.md
openclaw/workspace/: AGENTS.md
scripts/: model_smoke_test.py  openclaw_pending_messages.py  zoho_inspect_sandbox.py  zoho_smoke_test.py
sql/: 001_init.sql
src/company_agent/: __init__.py
src/company_agent/common/: auth.py  db.py  embeddings.py  logging.py  text.py
src/company_agent/crm_adapter/: __init__.py  adapters.py  config.py  main.py  models.py  zoho_client.py
src/company_agent/ingest_worker/: __init__.py  config.py  main.py
src/company_agent/rag_api/: __init__.py  config.py  main.py  schemas.py  search.py
tests/: test_auth.py  test_search.py  test_text.py
